--- a/src/main/resources/templates/buy-confirmation.html
+++ b/src/main/resources/templates/buy-confirmation.html
@@ -12,7 +12,7 @@
     <img th:src="@{'data:image/jpeg;base64,' + ${product.photo}}" style="max-height:300px;"
          onerror="this.src='/images/default-product.png'" class="img-thumbnail mb-3">
     <p class="mb-4">We will deliver your product soon. Please check your email for confirmation.</p>
-    <a href="/getAllProducts" class="btn btn-outline-success">Back to Products</a>
+    <a href="/getAll" class="btn btn-outline-success">Back to Products</a>
 </div>
 </body>
 </html>
